recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:15: error: not enough arguments for method draw: (level: Int, length: Double)Unit.
Unspecified value parameters level, length.
    draw()
        ^